Added about page, boilerplate - need help with card sizing

--- a/journal.html
+++ b/journal.html
@@ -58,10 +58,12 @@
                 <img id="portrait" src="./img/archie.png" alt="Portrait">
             </figure>
             <br/>
-            <li id="home-li"><a href="#">Home</a></li>
-            <li id="about-li"><a href="#">About</a></li>
+            <li id="home-li"><a href="">Home</a></li>
+            <li id="about-li"><a href="./about.html">About</a></li>
+            <li id="personal-li"><a href="#">Personal</a></li>
+            <li id="code-li"><a href="#">Code</a></li>
+            <li id="journal-li"><a href="./journal.html">Journal</a></li>
             <li id="contact-li"><a href="#">Contact</a></li>
-            <li id="links-li"><a href="#">Links</a></li>
         </ul>
     </nav>
 
@@ -163,7 +165,7 @@
         </section> 
     </main>
     <footer>
-        <form action="https://google.com">
+        <form action="./contact.html">
             <input type="submit" value="Contact me" id="contact-button"/>
         </form>
     </footer>
