Redesigned expand system that scales horizontally better

--- a/journal.html
+++ b/journal.html
@@ -69,11 +69,11 @@
 
     <main>
         <h2 class="mob-page-sub">journal</h2>
-        <h2 class="desk-page-sub"><br>j<br>o<br>u<br>r<br>n<br>a<br>l</h2>
-
+        <h2 class="desk-page-sub"><br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.</h2>
         <!-- FOR CLICK EXPAND -->
-        <label for="expand-1"><p class="expand-1" id="expand-text-1">e<br>x<br>p<br>a<br>n<br>d</p><span class="expand-1 fa-solid fa-expand" id="expand-icon-1"></span></label>
+        <label for="expand-1"><span class="expand-1" id="expand-icon-1">expand/collapse</span></label>
         <input type="checkbox" id="expand-1"/>
+        
         <section id="sec-1">
             <article>
                 <h2>Blog Post One</h2>
@@ -93,8 +93,9 @@
         </section>
 
         <!-- FOR CLICK EXPAND -->
-        <label for="expand-2"><p class="expand-2" id="expand-text-2">e<br>x<br>p<br>a<br>n<br>d</p><span class="expand-2 fa-solid fa-expand" id="expand-icon-2"></span></label>
+        <label for="expand-2"><span class="expand-2" id="expand-icon-2">expand/collapse</span></label>
         <input type="checkbox" id="expand-2"/>
+        
         <section id="sec-2">
             <article>
                 <h2>Blog Post Two</h2>
@@ -110,8 +111,9 @@
         </section>
 
         <!-- FOR CLICK EXPAND -->
-        <label for="expand-3"><p class="expand-3" id="expand-text-3">e<br>x<br>p<br>a<br>n<br>d</p><span class="expand-3 fa-solid fa-expand" id="expand-icon-3"></span></label>
+        <label for="expand-3"><span class="expand-3" id="expand-icon-3">expand/collapse</span></label>
         <input type="checkbox" id="expand-3"/>
+
         <section id="sec-3">
             <article>
                 <h2>Blog Post Three</h2>
@@ -129,8 +131,9 @@
         </section>
 
         <!-- FOR CLICK EXPAND -->
-        <label for="expand-4"><p class="expand-4" id="expand-text-4">e<br>x<br>p<br>a<br>n<br>d</p><span class="expand-4 fa-solid fa-expand" id="expand-icon-4"></span></label>
+        <label for="expand-4"><span class="expand-4" id="expand-icon-4">expand/collapse</span></label>
         <input type="checkbox" id="expand-4"/>
+
         <section id="sec-4">
             <article>
                 <h2>Blog Post Four</h2>
@@ -144,8 +147,9 @@
         </section>
 
         <!-- FOR CLICK EXPAND -->
-        <label for="expand-5"><p class="expand-5" id="expand-text-5">e<br>x<br>p<br>a<br>n<br>d</p><span class="expand-5 fa-solid fa-expand" id="expand-icon-5"></span></label>
+        <label for="expand-5"><span class="expand-5" id="expand-icon-5">expand/collapse</span></label>
         <input type="checkbox" id="expand-5"/>
+
         <section id="sec-5">
             <article>
                 <h2>Blog Post Five</h2>
