--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
     <main>
         <!-- PAGE SUBHEADING -->
         <h2 class="mob-page-sub">about</h2>
-        <h2 class="desk-page-sub"><br>a<br>b<br>o<br>u<br>t</h2>
+        <h2 class="desk-page-sub"><br>a<br>b<br>o<br>u<br>t<br>.<br>a<br>b<br>o<br>u<br>t<br>.<br>a<br>b<br>o<br>u<br>t<br>.<br>a<br>b<br>o<br>u<br>t<br>.<br>a<br>b<br>o<br>u<br>t<br>.<br>a<br>b<br>o<br>u<br>t<br>.</h2>
         <section id="about-me">
                 <h2>About me</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nec ex tellus. Nulla et orci interdum, congue nisl in, ultricies massa. Pellentesque lobortis velit a faucibus ornare. Duis convallis tortor sem, sed ullamcorper felis laoreet in. Donec vitae porta nibh. Duis vestibulum tincidunt enim in lobortis. Fusce ut nunc eget enim condimentum tempus. Nunc erat velit, molestie vehicula ligula id, pellentesque ornare neque. Quisque placerat enim nec metus efficitur, id lobortis enim euismod.
