Cleaned up hover effect on cards and removed hover from button card and about img

--- a/about.html
+++ b/about.html
@@ -43,12 +43,12 @@
         <span id="nav-links-mob">
             <ul id="nav-list">
                 <br/>
-                <li id="home-li"><a href="">Home</a></li>
-                <li id="about-li"><a href="./about.html">About</a></li>
-                <li id="personal-li"><a href="#">Personal</a></li>
-                <li id="code-li"><a href="#">Code</a></li>
-                <li id="journal-li"><a href="./journal.html">Journal</a></li>
-                <li id="contact-li"><a href="#">Contact</a></li>
+                <li id="home-li"><a href="">home</a></li>
+                <li id="about-li"><a href="./about.html">about</a></li>
+                <li id="personal-li"><a href="#">personal</a></li>
+                <li id="code-li"><a href="#">code</a></li>
+                <li id="journal-li"><a href="./journal.html">journal</a></li>
+                <li id="contact-li"><a href="#">contact</a></li>
             </ul>
         </span>
     </nav>
@@ -61,12 +61,12 @@
                 <img id="portrait" src="./img/archie.png" alt="Portrait">
             </figure>
             <br/>
-            <li id="home-li"><a href="">Home</a></li>
-            <li id="about-li"><a href="./about.html">About</a></li>
-            <li id="personal-li"><a href="#">Personal</a></li>
-            <li id="code-li"><a href="#">Code</a></li>
-            <li id="journal-li"><a href="./journal.html">Journal</a></li>
-            <li id="contact-li"><a href="#">Contact</a></li>
+            <li id="home-li"><a href="">home</a></li>
+            <li id="about-li"><a href="./about.html">about</a></li>
+            <li id="personal-li"><a href="#">personal</a></li>
+            <li id="code-li"><a href="#">code</a></li>
+            <li id="journal-li"><a href="./journal.html">journal</a></li>
+            <li id="contact-li"><a href="#">contact</a></li>
         </ul>
     </nav>
 
