--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 <body>
     <header>
         <h1>portfolio</h1>
-        <div id="head-square"></div>
+        <!-- <div id="head-square"></div> -->
         <div id="head-circle"></div>
     </header>
     <!-- MOBILE MENU -->
@@ -54,12 +54,9 @@
     </nav>
     <!-- DESKTOP MENU -->
     <input type="checkbox" id="menu-button">
-    <label for="menu-button" id="menu-text">Me<br>nu<br><span class="fa-solid fa-arrows-alt-h" id="arrow"></span></label>
+    <label for="menu-button" id="menu-text">Menu<br><span class="fa-solid fa-arrows-alt-h" id="arrow"></span></label>
     <nav id="nav-cont">
         <ul id="nav-list">
-            <figure>
-                <img id="portrait" src="./img/archie.png" alt="Portrait">
-            </figure>
             <br/>
             <li id="home-li"><a href="">home</a></li>
             <li id="about-li"><a href="./about.html">about</a></li>
@@ -67,6 +64,9 @@
             <li id="code-li"><a href="#">code</a></li>
             <li id="journal-li"><a href="./journal.html">journal</a></li>
             <li id="contact-li"><a href="#">contact</a></li>
+            <figure>
+                <img id="portrait" src="./img/archie.png" alt="Portrait">
+            </figure>
         </ul>
     </nav>
 
