--- a/journal.html
+++ b/journal.html
@@ -53,7 +53,7 @@
     </nav>
     <!-- DESKTOP MENU -->
     <input type="checkbox" id="menu-button">
-    <label for="menu-button" id="menu-text">Menu<br><span class="fa-solid fa-arrows-alt-h" id="arrow"></span></label>
+    <label for="menu-button" id="menu-text">menu<br><span class="fa-solid fa-arrows-alt-h" id="arrow"></span></label>
     <nav id="nav-cont">
         <ul id="nav-list">
             <figure>
