added code page, added mixin for modular cards on mobile, added two projects

--- a/journal.html
+++ b/journal.html
@@ -42,12 +42,13 @@
         <label for="show"><span id="nav-icon-desk">Me<br>nu</span></label>
         <span id="nav-links-mob">
             <ul id="nav-list">
-                <li id="home-li"><a href="">Home</a></li>
-                <li id="about-li"><a href="./about.html">About</a></li>
-                <li id="personal-li"><a href="#">Personal</a></li>
-                <li id="code-li"><a href="#">Code</a></li>
-                <li id="journal-li"><a href="./journal.html">Journal</a></li>
-                <li id="contact-li"><a href="#">Contact</a></li>
+                <br/>
+                <li id="home-li"><a href="">home</a></li>
+                <li id="about-li"><a href="./about.html">about</a></li>
+                <li id="personal-li"><a href="./personal.html">personal</a></li>
+                <li id="code-li"><a href="./code.html">code</a></li>
+                <li id="journal-li"><a href="./journal.html">journal</a></li>
+                <li id="contact-li"><a href="./contact.html">contact</a></li>
             </ul>
         </span>
     </nav>
@@ -56,19 +57,18 @@
     <label for="menu-button" id="menu-text">menu<br><span class="fa-solid fa-arrows-alt-h" id="arrow"></span></label>
     <nav id="nav-cont">
         <ul id="nav-list">
+            <br/>
+            <li id="home-li"><a href="">home</a></li>
+            <li id="about-li"><a href="./about.html">about</a></li>
+            <li id="personal-li"><a href="./personal.html">personal</a></li>
+            <li id="code-li"><a href="./code.html">code</a></li>
+            <li id="journal-li"><a href="./journal.html">journal</a></li>
+            <li id="contact-li"><a href="./contact.html">contact</a></li>
             <figure>
                 <img id="portrait" src="./img/archie.png" alt="Portrait">
             </figure>
-            <br/>
-            <li id="home-li"><a href="">Home</a></li>
-            <li id="about-li"><a href="./about.html">About</a></li>
-            <li id="personal-li"><a href="#">Personal</a></li>
-            <li id="code-li"><a href="#">Code</a></li>
-            <li id="journal-li"><a href="./journal.html">Journal</a></li>
-            <li id="contact-li"><a href="#">Contact</a></li>
         </ul>
     </nav>
-
     <main>
         <h2 class="mob-page-sub">journal</h2>
         <h2 class="desk-page-sub"><br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.</h2>
