Contact page done, tidied lots of things up, cards working as they should, still need to fix contact screen size/scroll issue

--- a/about.html
+++ b/about.html
@@ -86,11 +86,11 @@
         </section>
 
         <section id="about-buttons">
-            <form id="personal-button-cont" action="./personal.html">
-                <input type="submit" value="More about me" id="personal-button"/>
+            <form class="button-cont" action="./personal.html">
+                <input type="submit" value="More about me" class="button"/>
             </form>
-            <form id="projects-button-cont" action="./projects.html">
-                <input type="submit" value="See my code" id="projects-button"/>
+            <form class="button-cont" action="./projects.html">
+                <input type="submit" value="See my code" class="button"/>
             </form>
         </section>
 
