--- a/about.html
+++ b/about.html
@@ -43,11 +43,11 @@
         <span id="nav-links-mob">
             <ul id="nav-list">
                 <br/>
-                <li id="home-li"><a href="">home</a></li>
                 <li id="about-li"><a href="./about.html">about</a></li>
-                <li id="personal-li"><a href="./personal.html">personal</a></li>
                 <li id="code-li"><a href="./code.html">code</a></li>
+                <li id="personal-li"><a href="./personal.html">personal</a></li>
                 <li id="journal-li"><a href="./journal.html">journal</a></li>
+                <li id="resume-li"><a href="./resume.html">resume</a></li>
                 <li id="contact-li"><a href="./contact.html">contact</a></li>
             </ul>
         </span>
@@ -58,11 +58,11 @@
     <nav id="nav-cont">
         <ul id="nav-list">
             <br/>
-            <li id="home-li"><a href="">home</a></li>
             <li id="about-li"><a href="./about.html">about</a></li>
-            <li id="personal-li"><a href="./personal.html">personal</a></li>
             <li id="code-li"><a href="./code.html">code</a></li>
+            <li id="personal-li"><a href="./personal.html">personal</a></li>
             <li id="journal-li"><a href="./journal.html">journal</a></li>
+            <li id="resume-li"><a href="./resume.html">resume</a></li>
             <li id="contact-li"><a href="./contact.html">contact</a></li>
             <figure>
                 <img id="portrait" src="./img/archie.png" alt="Portrait">
