--- a/contact.html
+++ b/contact.html
@@ -73,11 +73,11 @@
         <h2 class="mob-page-sub">contact</h2>
         <h2 class="desk-page-sub"><br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.</h2>
         
-        <section class="card-dark" id="email">
+        <section class="card-dark contact-card" id="email">
             <h2>Email</h2>
             <p>tanesamuelkaio@gmail.com</p>
         </section>
-        <section class="card-dark" id="phone">
+        <section class="card-dark contact-card" id="phone">
             <h2>Phone</h2>
             <p>04-666-518-20</p>
         </section>
