--- a/resume.html
+++ b/resume.html
@@ -72,7 +72,11 @@
     <main>
         <h2 class="mob-page-sub">resume</h2>
         <h2 class="desk-page-sub"><br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.</h2>
-        
+        <article class="download-link">
+            <a href="./img/resume/resume-template.pdf" download>
+                <p>Download resume</p>
+              </a>
+        </article>
             <article id="resume-cont">
                 <iframe id="resume" src="./img/resume-template.pdf#zoom=25" height="100%" width="100%"></iframe>
             </article>
