Last commit before CSS clean-up

--- a/contact.html
+++ b/contact.html
@@ -85,17 +85,17 @@
         <section class="clear-card" id="logos-card">
             <figure>
                 <a href="https://github.com/Lanruoj" target="_blank">
-                    <img class="logo" src="./img/github.png"/>
+                    <img src="./img/github.png"/>
                 </a>
             </figure>
             <figure>
                 <a href="https://twitter.com" target="_blank">
-                    <img class="logo" id="twitter" src="./img/twitter.png"/>
+                    <img src="./img/twitter.png"/>
                 </a>
             </figure>
             <figure>
                 <a href="https://au.linkedin.com" target="_blank">
-                    <img class="logo" src="./img/linkedin.png"/>
+                    <img src="./img/linkedin.png"/>
                 </a>
             </figure>
         </section>
