Clean up going well, up to clear-card()

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
         <figure id="about-img-cont">
             <img id="about-img" class="img" src="./img/portrait.jpeg" alt="An image of me">
         </figure>
-        <section class="card" id="about-card">
+        <section class="card">
                 <h2>About me</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nec ex tellus. Nulla et orci interdum, congue nisl in, ultricies massa. Pellentesque lobortis velit a faucibus ornare. Duis convallis tortor sem, sed ullamcorper felis laoreet in. Donec vitae porta nibh. Duis vestibulum tincidunt enim in lobortis. Fusce ut nunc eget enim condimentum tempus. Nunc erat velit, molestie vehicula ligula id, pellentesque ornare neque. Quisque placerat enim nec metus efficitur, id lobortis enim euismod.
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tellus lacus, placerat a semper ut, suscipit et mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent ut velit id diam finibus dignissim. Maecenas nulla velit, commodo ac justo a, hendrerit vehicula ligula. Proin sit amet nunc fringilla, mollis diam ac, tincidunt elit. Cras id sem posuere, condimentum elit vel, volutpat sem. Donec sit amet sem et odio eleifend sollicitudin. Quisque convallis egestas nulla vel vehicula. Donec sodales diam turpis, facilisis congue est consequat nec. Quisque mauris dui, condimentum eleifend finibus eu, pretium at nisl. Nulla vel fringilla elit. Aenean in eros hendrerit orci vulputate viverra eu eget sapien. Curabitur placerat aliquet nisi sed ullamcorper.
