--- a/contact.html
+++ b/contact.html
@@ -73,16 +73,16 @@
         <h2 class="mob-page-sub">contact</h2>
         <h2 class="desk-page-sub"><br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.</h2>
         
-        <section class="card-dark contact-card" id="email">
+        <section class="card-modular contact-card" id="email">
             <h2>Email</h2>
             <p>tanesamuelkaio@gmail.com</p>
         </section>
-        <section class="card-dark contact-card" id="phone">
+        <section class="card-modular contact-card" id="phone">
             <h2>Phone</h2>
             <p>04-666-518-20</p>
         </section>
 
-        <section class="clear-card" id="logos-card">
+        <section id="logos-card">
             <figure>
                 <a href="https://github.com/Lanruoj" target="_blank">
                     <img src="./img/github.png"/>
