Fixed up sub-page, mobile heading/hamburger switched around, general housekeeping

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
     <main>
         <!-- PAGE SUBHEADING -->
         <h2 class="mob-page-sub">about</h2>
-        <h2 class="desk-page-sub"><br>a<br>b<br>o<br>u<br>t<br>.<br>a<br>b<br>o<br>u<br>t<br>.<br>a<br>b<br>o<br>u<br>t<br>.<br>a<br>b<br>o<br>u<br>t<br>.<br>a<br>b<br>o<br>u<br>t<br>.<br>a<br>b<br>o<br>u<br>t<br>.</h2>
+        <h2 class="desk-page-sub">about . about . about . about . about . about . about . about . about</h2>
 
         <figure id="about-img-cont">
             <img id="about-img" class="img" src="./img/portrait.jpeg" alt="An image of me">
