--- a/contact.html
+++ b/contact.html
@@ -70,9 +70,8 @@
         </ul>
     </nav>
     <main>
-        <h2 class="mob-page-sub">contact</h2>
-        <h2 class="desk-page-sub"><br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.</h2>
-        
+        <!-- <h2 class="mob-page-sub">contact</h2>
+        <h2 class="desk-page-sub" id="contact-sub-page-desk">contact . contact . contact . contact . contact . contact . contact</h2> -->
         <section class="card-modular contact-card" id="email">
             <h2>Email</h2>
             <p>tanesamuelkaio@gmail.com</p>
@@ -99,7 +98,6 @@
                 </a>
             </figure>
         </section>
-
     </main>
     <footer>
         <form action="./contact.html">
