--- a/journal.html
+++ b/journal.html
@@ -71,7 +71,7 @@
     </nav>
     <main>
         <h2 class="mob-page-sub">journal</h2>
-        <h2 class="desk-page-sub"><br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.<br>j<br>o<br>u<br>r<br>n<br>a<br>l<br>.</h2>
+        <h2 class="desk-page-sub">journal . journal . journal . journal . journal . journal . journal . journal . journal . journal . journal . journal</h2>
         <!-- FOR CLICK EXPAND -->
         <input type="checkbox" id="expand-check-1"/>
         <label for="expand-check-1" class="expand-icon">expand/collapse</label>
