Looking good, header rearranged and colour scheme changed

--- a/journal.html
+++ b/journal.html
@@ -31,8 +31,8 @@
 </head>
 <body>
     <header>
-        <h1>portfolio</h1>
-        <div id="head-square"></div>
+        <h1 class="header">portfolio</h1>
+        <div class="header" id="head-square"></div>
         <div id="head-circle"></div>
     </header>
     <!-- MOBILE MENU -->
