--- a/about.html
+++ b/about.html
@@ -1,105 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <!-- FONTS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Unica+One&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Eczar:wght@700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cousine:wght@700&display=swap" rel="stylesheet">
-    <!-- FONT-AWESOME ICONS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./style.css" />
+  <!-- FONTS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap" rel="stylesheet" />
+  <!-- FONT-AWESOME ICONS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>About</title>
+  <title>About / TK</title>
 </head>
+
 <body>
-    <header>
-        <h1>portfolio</h1>
-        <div id="head-circle"></div>
-    </header>
-    <!-- MOBILE MENU -->
-    <nav id="nav-cont-mob">
-        <input type="checkbox" id="nav-button-mob">
-        <label for="nav-button-mob"><span class="fa-solid fa-bars" id="nav-icon-mob"></span></label>
-        <label for="nav-button-mob"><span id="blank-span">Me<br>nu</span></label>
-        <span id="nav-links-mob">
-            <ul class="nav-list" id="nav-list-mob">
-                <br/>
-                <li id="about-li"><a href="./about.html">about</a></li>
-                <li id="code-li"><a href="./code.html">code</a></li>
-                <li id="personal-li"><a href="./personal.html">personal</a></li>
-                <li id="journal-li"><a href="./journal.html">journal</a></li>
-                <li id="resume-li"><a href="./resume.html">resume</a></li>
-                <li id="contact-li"><a href="./contact.html">contact</a></li>
-            </ul>
-        </span>
-    </nav>
-    <!-- DESKTOP MENU -->
-    <input type="checkbox" id="nav-button-desk">
-    <label for="nav-button-desk" id="menu-text-desk">menu<br><span class="fa-solid fa-arrows-alt-h" id="arrow"></span></label>
-    <nav id="nav-cont-desk">
-        <ul class="nav-list" id="nav-list-desk">
-            <br/>
-            <li id="about-li"><a href="./about.html">about</a></li>
-            <li id="code-li"><a href="./code.html">code</a></li>
-            <li id="personal-li"><a href="./personal.html">personal</a></li>
-            <li id="journal-li"><a href="./journal.html">journal</a></li>
-            <li id="resume-li"><a href="./resume.html">resume</a></li>
-            <li id="contact-li"><a href="./contact.html">contact</a></li>
-            <figure>
-                <img id="portrait" src="./img/archie.png" alt="Portrait">
-            </figure>
-        </ul>
-    </nav>
+  <header>
+    <h1>portfolio</h1>
+    <div id="head-circle"></div>
+  </header>
+  <!-- MOBILE MENU -->
+  <nav id="nav-cont-mob">
+    <input type="checkbox" id="nav-button-mob" />
+    <label for="nav-button-mob"><span class="fa-solid fa-bars" id="nav-icon-mob"></span></label>
+    <label for="nav-button-mob"><span id="blank-span">Me<br />nu</span></label>
+    <div id="nav-links-mob">
+      <ul class="nav-list" id="nav-list-mob">
+        <li><a href="./about.html">about</a></li>
+        <li><a href="./code.html">code</a></li>
+        <!-- <li><a href="./personal.html">personal</a></li> -->
+        <li><a href="./journal.html">journal</a></li>
+        <li><a href="./resume.html">resume</a></li>
+        <li><a href="./contact.html">contact</a></li>
+      </ul>
+    </div>
+  </nav>
+  <!-- DESKTOP MENU -->
+  <input type="checkbox" id="nav-button-desk" />
+  <label for="nav-button-desk" id="menu-text-desk">menu<br /><span class="fa-solid fa-arrows-alt-h"
+      id="arrow"></span></label>
+  <nav id="nav-cont-desk">
+    <ul class="nav-list" id="nav-list-desk">
+      <li><a href="./about.html">about</a></li>
+      <li><a href="./code.html">code</a></li>
+      <!-- <li><a href="./personal.html">personal</a></li> -->
+      <li><a href="./journal.html">journal</a></li>
+      <li><a href="./resume.html">resume</a></li>
+      <li><a href="./contact.html">contact</a></li>
+      <li><img id="portrait" src="./img/archie.png" alt="Portrait" /></li>
+    </ul>
+  </nav>
 
-    <main>
-        <!-- PAGE SUBHEADING -->
-        <h2 class="mob-page-sub">about</h2>
-        <h2 class="desk-page-sub">about . about . about . about . about . about . about . about . about</h2>
+  <main>
+    <!-- PAGE SUBHEADING -->
+    <h2 class="desk-page-sub">about . about . about . about . about . about . about . about . about</h2>
 
-        <figure id="about-img-cont">
-            <img id="about-img" class="img" src="./img/portrait.jpeg" alt="An image of me">
-        </figure>
-        <section class="card">
-            <h2>About me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nec ex tellus. Nulla et orci interdum, congue nisl in, ultricies massa. Pellentesque lobortis velit a faucibus ornare. Duis convallis tortor sem, sed ullamcorper felis laoreet in. Donec vitae porta nibh. Duis vestibulum tincidunt enim in lobortis. Fusce ut nunc eget enim condimentum tempus. Nunc erat velit, molestie vehicula ligula id, pellentesque ornare neque. Quisque placerat enim nec metus efficitur, id lobortis enim euismod.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tellus lacus, placerat a semper ut, suscipit et mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent ut velit id diam finibus dignissim. Maecenas nulla velit, commodo ac justo a, hendrerit vehicula ligula. Proin sit amet nunc fringilla, mollis diam ac, tincidunt elit. Cras id sem posuere, condimentum elit vel, volutpat sem. Donec sit amet sem et odio eleifend sollicitudin. Quisque convallis egestas nulla vel vehicula. Donec sodales diam turpis, facilisis congue est consequat nec. Quisque mauris dui, condimentum eleifend finibus eu, pretium at nisl. Nulla vel fringilla elit. Aenean in eros hendrerit orci vulputate viverra eu eget sapien. Curabitur placerat aliquet nisi sed ullamcorper.
-            </p>
-        </section>
+    <figure id="about-img-cont">
+      <img id="about-img" class="img" src="./img/portrait.jpeg" alt="An image of me">
+    </figure>
+    <section class="card">
+      <h2>About me</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nec ex tellus. Nulla et orci interdum, congue
+        nisl in, ultricies massa. Pellentesque lobortis velit a faucibus ornare. Duis convallis tortor sem, sed
+        ullamcorper felis laoreet in. Donec vitae porta nibh. Duis vestibulum tincidunt enim in lobortis. Fusce ut nunc
+        eget enim condimentum tempus. Nunc erat velit, molestie vehicula ligula id, pellentesque ornare neque. Quisque
+        placerat enim nec metus efficitur, id lobortis enim euismod.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tellus lacus, placerat a semper ut, suscipit et
+        mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent ut
+        velit id diam finibus dignissim. Maecenas nulla velit, commodo ac justo a, hendrerit vehicula ligula. Proin sit
+        amet nunc fringilla, mollis diam ac, tincidunt elit. Cras id sem posuere, condimentum elit vel, volutpat sem.
+        Donec sit amet sem et odio eleifend sollicitudin. Quisque convallis egestas nulla vel vehicula. Donec sodales
+        diam turpis, facilisis congue est consequat nec. Quisque mauris dui, condimentum eleifend finibus eu, pretium at
+        nisl. Nulla vel fringilla elit. Aenean in eros hendrerit orci vulputate viverra eu eget sapien. Curabitur
+        placerat aliquet nisi sed ullamcorper.
+      </p>
+    </section>
 
-        <section id="about-buttons">
-            <form class="button-cont" action="./personal.html">
-                <input type="submit" value="More about me" class="button"/>
-            </form>
-            <form class="button-cont" action="./projects.html">
-                <input type="submit" value="See my code" class="button"/>
-            </form>
-        </section>
+    <div id="about-buttons">
+      <form class="button-cont" action="./code.html">
+        <input type="submit" value="See my code" class="button" />
+      </form>
+      <form class="button-cont" action="./personal.html">
+        <input type="submit" value="See my resume" class="button" />
+      </form>
+    </div>
 
-    </main>
+  </main>
 
-    <footer>
-        <form action="./contact.html">
-            <input type="submit" value="Contact me" id="contact-button"/>
-        </form>
-    </footer>
-    <script></script>
+  <footer>
+    <p>&copy; Tané Kaio, 2022</p>
+    <form action="./contact.html">
+      <input type="submit" value="Contact me" id="contact-button" />
+    </form>
+  </footer>
 </body>
+
 </html>
