--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <title>Contact / TK</title>
+  <title>Home / TK</title>
 </head>
 
 <body>
@@ -55,34 +55,15 @@
       <li><img id="portrait" src="./img/archie.png" alt="Portrait" /></li>
     </ul>
   </nav>
-  <main>
-    <section class="card-modular contact-card" id="email">
-      <h2>Email</h2>
-      <p>tanesamuelkaio@gmail.com</p>
-    </section>
-    <section class="card-modular contact-card" id="phone">
-      <h2>Phone</h2>
-      <p>04-666-518-20</p>
-    </section>
 
-    <div class="card" id="logos-card">
-      <figure>
-        <a href="https://github.com/Lanruoj" target="_blank">
-          <img src="./img/github.png" alt="github logo" />
-        </a>
-      </figure>
-      <figure>
-        <a href="https://twitter.com" target="_blank">
-          <img src="./img/twitter.png" alt="twitter logo" />
-        </a>
-      </figure>
-      <figure>
-        <a href="https://au.linkedin.com" target="_blank">
-          <img src="./img/linkedin.png" alt="linkdin logo" />
-        </a>
-      </figure>
-    </div>
+  <main>
+    <!-- PAGE SUBHEADING -->
+    <h2 class="desk-page-sub">about . about . about . about . about . about . about . about . about</h2>
+
+
+
   </main>
+
   <footer>
     <p>&copy; Tané Kaio, 2022</p>
     <form action="./contact.html">
