--- a/journal.html
+++ b/journal.html
@@ -76,7 +76,7 @@
       </h2>
       <!-- FOR CLICK EXPAND -->
       <input type="checkbox" id="expand-check-1" />
-      <label for="expand-check-1" class="expand-icon">expand/collapse</label>
+      <label for="expand-check-1" class="expand-icon">+/-</label>
 
       <article class="card-expand" id="journal-card-1">
         <h2>Blog Post One</h2>
@@ -147,7 +147,7 @@
       </article>
       <!-- FOR CLICK EXPAND -->
       <input type="checkbox" id="expand-check-2" />
-      <label for="expand-check-2" class="expand-icon">expand/collapse</label>
+      <label for="expand-check-2" class="expand-icon">+/-</label>
 
       <article class="card-expand" id="journal-card-2">
         <h2>Blog Post Two</h2>
@@ -198,7 +198,7 @@
 
       <!-- FOR CLICK EXPAND -->
       <input type="checkbox" id="expand-check-3" />
-      <label for="expand-check-3" class="expand-icon">expand/collapse</label>
+      <label for="expand-check-3" class="expand-icon">+/-</label>
 
       <article class="card-expand" id="journal-card-3">
         <h2>Blog Post Three</h2>
@@ -257,7 +257,7 @@
 
       <!-- FOR CLICK EXPAND -->
       <input type="checkbox" id="expand-check-4" />
-      <label for="expand-check-4" class="expand-icon">expand/collapse</label>
+      <label for="expand-check-4" class="expand-icon">+/-</label>
 
       <article class="card-expand" id="journal-card-4">
         <h2>Blog Post Four</h2>
@@ -310,7 +310,7 @@
 
       <!-- FOR CLICK EXPAND -->
       <input type="checkbox" id="expand-check-5" />
-      <label for="expand-check-5" class="expand-icon">expand/collapse</label>
+      <label for="expand-check-5" class="expand-icon">+/-</label>
 
       <article class="card-expand" id="journal-card-5">
         <h2>Blog Post Five</h2>
