Everything working well, purple/dark brown colour scheme, everything validated - now to do home page

--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
       <form class="button-cont" action="./code.html">
         <input type="submit" value="See my code" class="button" />
       </form>
-      <form class="button-cont" action="./personal.html">
+      <form class="button-cont" action="./resume.html">
         <input type="submit" value="See my resume" class="button" />
       </form>
     </div>
