Home page built, need to fix up button classes

--- a/index.html
+++ b/index.html
@@ -20,56 +20,18 @@
 </head>
 
 <body>
-  <header>
-    <h1>portfolio</h1>
-    <div id="head-circle"></div>
-  </header>
-  <!-- MOBILE MENU -->
-  <nav id="nav-cont-mob">
-    <input type="checkbox" id="nav-button-mob" />
-    <label for="nav-button-mob"><span class="fa-solid fa-bars" id="nav-icon-mob"></span></label>
-    <label for="nav-button-mob"><span id="blank-span">Me<br />nu</span></label>
-    <div id="nav-links-mob">
-      <ul class="nav-list" id="nav-list-mob">
-        <li><a href="./about.html">about</a></li>
-        <li><a href="./code.html">code</a></li>
-        <!-- <li><a href="./personal.html">personal</a></li> -->
-        <li><a href="./journal.html">journal</a></li>
-        <li><a href="./resume.html">resume</a></li>
-        <li><a href="./contact.html">contact</a></li>
-      </ul>
-    </div>
-  </nav>
-  <!-- DESKTOP MENU -->
-  <input type="checkbox" id="nav-button-desk" />
-  <label for="nav-button-desk" id="menu-text-desk">menu<br /><span class="fa-solid fa-arrows-alt-h"
-      id="arrow"></span></label>
-  <nav id="nav-cont-desk">
-    <ul class="nav-list" id="nav-list-desk">
-      <li><a href="./about.html">about</a></li>
-      <li><a href="./code.html">code</a></li>
-      <!-- <li><a href="./personal.html">personal</a></li> -->
-      <li><a href="./journal.html">journal</a></li>
-      <li><a href="./resume.html">resume</a></li>
-      <li><a href="./contact.html">contact</a></li>
-      <li><img id="portrait" src="./img/archie.png" alt="Portrait" /></li>
-    </ul>
-  </nav>
 
   <main>
-    <!-- PAGE SUBHEADING -->
-    <h2 class="desk-page-sub">about . about . about . about . about . about . about . about . about</h2>
-
-
 
   </main>
-
-  <footer>
-    <p>&copy; Tané Kaio, 2022</p>
-    <form action="./contact.html">
-      <input type="submit" value="Contact me" id="contact-button" />
-    </form>
-  </footer>
+    <section class="page">
+        <h2 id="welcome-text">Welcome to the portfolio of aspiring web developer, Tané Kaio</h2>
+    </section>
+    <div id="about-buttons">
+        <form class="button-cont" action="./about.html">
+            <input type="submit" value="Who am I?" class="button" />
+        </form>
+    </div>
 </body>
 
 </html>
